data/invalid-service-4.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: "5432"
    targetPort: 5432
    protocol: TCP
  selector:
    app: db
