data/invalid-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  portish:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: db
